--- a/more.html
+++ b/more.html
@@ -1,1 +1,78 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SATER_ | Page</title>
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
 
+    <style>
+        /* نفس الهوية البصرية */
+        :root { --bg-color: #F2EFE5; --text-color: #0E182A; }
+        body {
+            background-color: var(--bg-color); color: var(--text-color);
+            font-family: 'Space Mono', monospace; margin: 0; padding: 0;
+            display: flex; flex-direction: column; align-items: center; min-height: 100vh;
+        }
+        body::before {
+            content: ""; position: fixed; top: 0; left: 0; width: 100%; height: 100%;
+            background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.65' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)' opacity='0.04'/%3E%3C/svg%3E");
+            pointer-events: none; z-index: -1;
+        }
+
+        /* القائمة */
+        nav { padding: 40px 0; text-align: center; }
+        nav a {
+            text-decoration: none; color: var(--text-color); font-size: 0.9rem;
+            margin: 0 15px; text-transform: uppercase; letter-spacing: 1px;
+            position: relative; transition: opacity 0.3s;
+        }
+        nav a:hover { opacity: 0.6; }
+        nav a.current { font-weight: 700; border-bottom: 2px solid var(--text-color); }
+
+        /* منطقة المحتوى */
+        .content-area {
+            width: 80%; max-width: 800px;
+            margin-top: 50px; text-align: left;
+            opacity: 0; animation: fadeIn 1s ease-out 0.5s forwards;
+        }
+
+        h1.page-title {
+            font-family: 'Cinzel', serif; font-size: 3rem; margin-bottom: 10px;
+            text-transform: uppercase; letter-spacing: 5px;
+        }
+
+        p.description { line-height: 1.6; opacity: 0.8; }
+
+        @keyframes fadeIn { from { opacity: 0; transform: translateY(20px); } to { opacity: 1; transform: translateY(0); } }
+        
+        @media (max-width: 600px) {
+            nav { padding: 20px 0; }
+            nav a { margin: 0 8px; font-size: 0.75rem; }
+            h1.page-title { font-size: 2rem; }
+        }
+    </style>
+</head>
+<body>
+
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="apps.html">Apps</a> 
+        <a href="games.html">Games</a>
+        <a href="about.html">About</a>
+        <a href="more.html" class="current">More</a>
+    </nav>
+
+    <div class="content-area">
+        <h1 class="page-title">Apps_</h1>
+        <p class="description">
+            [ Under Construction ] <br><br>
+            Innovative tools built from scratch. Developing the future of utility software.
+        </p>
+    </div>
+
+</body>
+</html>
