Change page title from 'Apps' to 'More'

--- a/more.html
+++ b/more.html
@@ -67,7 +67,7 @@
     </nav>
 
     <div class="content-area">
-        <h1 class="page-title">Apps_</h1>
+        <h1 class="page-title">More_</h1>
         <p class="description">
             [ Under Construction ] <br><br>
             Innovative tools built from scratch. Developing the future of utility software.
