Update contact email in privacy.html

--- a/tam/privacy.html
+++ b/tam/privacy.html
@@ -126,8 +126,9 @@
 
             <h3>7. Contact Information</h3>
             <p>
-                For any inquiries regarding your privacy or the SATER_ ecosystem, contact founder Omar Abu Abbass at: 
-                <a href="mailto:omarabuabbas29@gmail.com" style="color: inherit; font-weight: bold;">omarabuabbas29@gmail.com</a>
+                For any inquiries regarding your privacy or the SATER_ ecosystem, contact us at: 
+                <a href="mailto:beatnabytna@gmail.com" style="color: inherit; font-weight: bold;">beatnabytna@gmail.com
+</a>
             </p>
         </div>
 
