Update accent color and developer name in index.html

--- a/khamen/index.html
+++ b/khamen/index.html
@@ -13,7 +13,7 @@
         :root { 
             --bg-color: #F2EFE5; 
             --text-color: #0E182A; 
-            --accent-color: #8B0000; /* أحمر داكن (Dark Red) يعكس "الساحة" والغموض */
+            --accent-color: #3498DB; /* أزرق سماوي خفيف (Light Blue) */
         }
         
         body {
@@ -185,7 +185,7 @@
         <ul class="tech-list">
             <li class="tech-item">
                 <span class="tech-label">Developer</span>
-                SATER Studio / Omar Abu Abbass
+                SATER_
             </li>
             <li class="tech-item">
                 <span class="tech-label">Platform</span>
@@ -211,7 +211,7 @@
             "KHAMEN was built on a simple promise: technology should bring us together, not drive us apart. 
             It is a tool designed to spark laughter, debate, and human connection in a room full of screens."
         </p>
-        <span class="quote-author">— SATER Studio</span>
+        <span class="quote-author">— SATER_</span>
     </div>
 
     <div class="footer-links">
