--- a/more.html
+++ b/more.html
@@ -197,7 +197,7 @@
                 Have a proposal? Or looking to join the legion? <br>
                 The line is open.
             </p>
-            <a href="mailto:omarabuabbas29@gmail.com" class="contact-btn">Establish Uplink</a>
+            <a href="mailto:beatnabytna@gmail.com" class="contact-btn">Establish Uplink</a>
         </div>
 
     </div>
