Update architect section with Omar Abu Abbass
Added a new architect name and updated the narrative description.

--- a/about.html
+++ b/about.html
@@ -184,6 +184,7 @@
 
         <div class="architect-section hidden-up">
             <span class="architect-title">The Architect</span>
+            <h2 class="architect-name">Omar Abu Abbass</h2>
             <p class="narrative-desc" style="max-width: 600px; margin: 0 auto;">
                 Driven by an obsession with structure and narrative, Omar founded SATER_ to define a new standard for digital craftsmanship. 
                 Where others see a screen, he sees a canvas for functional legends.
