--- a/more.html
+++ b/more.html
@@ -135,6 +135,7 @@
             .project-item::before { left: -34px; }
         }
     </style>
+    <link rel="icon" type="image/png" href="/favicon.png">
 </head>
 <body>
 
