--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
             nav a { margin: 0 8px; font-size: 0.75rem; }
         }
     </style>
+    <link rel="icon" type="image/png" href="/favicon.png">
 </head>
 <body>
 
