--- a/apps.html
+++ b/apps.html
@@ -119,6 +119,7 @@
             .apps-grid { grid-template-columns: 1fr; }
         }
     </style>
+    <link rel="icon" type="image/png" href="/favicon.png">
 </head>
 <body>
 
