--- a/about.html
+++ b/about.html
@@ -122,6 +122,7 @@
             .architect-name { font-size: 2.2rem; letter-spacing: 4px; }
         }
     </style>
+    <link rel="icon" type="image/png" href="/favicon.png">
 </head>
 <body>
 
