--- a/tam/terms.html
+++ b/tam/terms.html
@@ -70,6 +70,7 @@
 
         @media (max-width: 600px) { h1.doc-title { font-size: 1.8rem; } }
     </style>
+    <link rel="icon" type="image/png" href="/favicon.png">
 </head>
 <body>
 
