Add favicon link to index.html

--- a/khamen/index.html
+++ b/khamen/index.html
@@ -124,6 +124,7 @@
             .tech-list { grid-template-columns: 1fr; }
         }
     </style>
+    <link rel="icon" type="image/png" href="/favicon.png">
 </head>
 <body>
 
