Enhance SEO with Open Graph and Twitter meta tags
Added Open Graph and Twitter meta tags for improved social sharing.

--- a/index.html
+++ b/index.html
@@ -149,6 +149,27 @@
         }
     </style>
     <link rel="icon" type="image/png" href="/favicon.png">
+    <meta name="description" content="SATER_ | Where utility meets art. A digital lab crafting minimalist apps, games, and future protocols.">
+    
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://thesater.com/">
+    <meta property="og:title" content="SATER_ | The Origin">
+    <meta property="og:description" content="Not LTR to RTL, But RTL to LTR. Explore the new standard of digital craftsmanship.">
+    <meta property="og:image" content="https://thesater.com/cover.jpg">
+
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://thesater.com/">
+    <meta property="twitter:title" content="SATER_ | The Origin">
+    <meta property="twitter:description" content="Minimalist Apps & Games. Built from the Origin.">
+    <meta property="twitter:image" content="https://thesater.com/cover.jpg">
+    ```
+
+### ماذا تفعل الآن؟
+1.  ارفع صورة `cover.jpg`.
+2.  انسخ هذا الكود وأضفه لملف `index.html`.
+3.  (اختياري لكن مفضل) يمكنك إضافة نفس الكود لباقي الصفحات (`apps.html`, `games.html`...) مع تغيير بسيط في `og:title` و `og:description` ليناسب كل صفحة.
+
+بهذه اللمسة، سيتحول الرابط من "موقع مجهول" إلى "بطاقة دعوة فاخرة"! 😎
 </head>
 <body>
 
