Update privacy policy details and structure

--- a/khamen/privacy.html
+++ b/khamen/privacy.html
@@ -60,6 +60,12 @@
         
         .legal-text strong { font-weight: 700; color: var(--text-color); }
 
+        /* تنسيق القوائم للنقاط الجديدة */
+        .legal-text ul { padding-left: 20px; margin-bottom: 20px; }
+        .legal-text li { margin-bottom: 10px; font-size: 0.9rem; }
+        .legal-text a { color: var(--accent-color); text-decoration: none; border-bottom: 1px dotted var(--accent-color); }
+        .legal-text a:hover { border-bottom-style: solid; }
+
         .back-btn {
             display: inline-block; margin-top: 40px; padding: 15px 30px;
             border: 1px solid var(--text-color); color: var(--text-color);
@@ -86,7 +92,7 @@
         <h2 class="app-name">For Application: KHAMEN</h2>
 
         <div class="legal-text">
-            <p><strong>Last Updated:</strong> January 01, 2026</p>
+            <p><strong>Last Updated:</strong> January 31, 2026</p>
             
             <p>
                 SATER built the KHAMEN app as a Free app. This SERVICE is provided by SATER at no cost and is intended for use as is.
@@ -95,29 +101,51 @@
 
             <h3>1. Information Collection and Use</h3>
             <p>
-                I want to inform you that <strong>I do not collect, store, or share any personal information</strong> or data from users. 
-                The app functions entirely locally on your device.
+                For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information. 
+                The information that I request will be retained on your device and is not collected by me in any way.
+            </p>
+            <p>
+                However, the app does use third-party services that may collect information used to identify you.
+                Link to privacy policy of third-party service providers used by the app:
+            </p>
+            <ul>
+                <li><a href="https://www.google.com/policies/privacy/" target="_blank">Google Play Services</a></li>
+                <li><a href="https://support.google.com/admob/answer/6128543?hl=en" target="_blank">AdMob</a></li>
+            </ul>
+
+            <h3>2. Log Data</h3>
+            <p>
+                I want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information (through third party products) on your phone called <strong>Log Data</strong>. 
+                This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.
             </p>
 
-            <h3>2. Device Sensors Data</h3>
+            <h3>3. Device Sensors Data</h3>
             <p>
                 The app requires access to your device's sensors (specifically the Accelerometer and Gyroscope) to function properly. 
                 This sensor data is used solely for gameplay mechanics (to detect motion and orientation during the game). 
                 This data is processed in real-time on your device and is <strong>never recorded, stored, or transmitted</strong> to any server.
             </p>
 
-            <h3>3. Children’s Privacy</h3>
+            <h3>4. Advertising</h3>
             <p>
-                These Services do not address anyone under the age of 13. I do not knowingly collect personally identifiable information from children under 13.
+                We use <strong>Google AdMob</strong> to display ads. AdMob may use your device's Advertising ID to serve personalized ads based on your interests. 
+                You can opt-out of personalized advertising by visiting your device settings (Google > Ads > Opt out of Ads Personalization).
             </p>
 
-            <h3>4. Changes to This Privacy Policy</h3>
+            <h3>5. Children’s Privacy</h3>
+            <p>
+                These Services do not address anyone under the age of 13. I do not knowingly collect personally identifiable information from children under 13. 
+                In the case I discover that a child under 13 has provided me with personal information, I immediately delete this from our servers. 
+                If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact me so that I will be able to do necessary actions.
+            </p>
+
+            <h3>6. Changes to This Privacy Policy</h3>
             <p>
                 I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. 
                 I will notify you of any changes by posting the new Privacy Policy on this page.
             </p>
 
-            <h3>5. Contact Us</h3>
+            <h3>7. Contact Us</h3>
             <p>
                 If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me at: 
                 <a href="mailto:beatnabytna@gmail.com" style="color: var(--accent-color); font-weight: bold; text-decoration: none;">beatnabytna@gmail.com</a>
