Revise content and features in index.html

--- a/khamen/index.html
+++ b/khamen/index.html
@@ -138,9 +138,9 @@
         <h2 class="subtitle">The Social Arena</h2>
         <p class="intro-text">
             Unmask the Truth. Master the Chaos. <br><br>
-            KHAMEN is the heartbeat of every gathering. Built by SATER Studio, 
-            it transforms awkward silences into electric battlefields of wit and deception. 
-            The ultimate digital moderator for the real world.
+            The ultimate digital moderator for the real world. Spy games, social challenges, 
+            and decision-making tools—all in one app. Built by SATER Studio to transform 
+            awkward silences into electric battlefields.
         </p>
         <div class="status-badge">Version 1.0.0 Global Launch</div>
         <div class="status-badge" style="border-color: var(--accent-color); color: var(--accent-color);">Live on Google Play</div>
@@ -154,28 +154,36 @@
                 <h3>A. The Spy Protocol</h3>
                 <p style="font-size: 0.8rem; opacity: 0.7;">(Bra Al-Salfa)</p>
                 <ul>
-                    <li><strong>Deception Engine:</strong> One player is the "Spy". The rest must identify them without revealing the truth.</li>
+                    <li><strong>Deception Engine:</strong> One player is the "Spy". The rest must identify them without revealing the location.</li>
                     <li><strong>Interrogation:</strong> A unique phase forcing pressing questions to heat up suspicion.</li>
                     <li><strong>Tactical Voting:</strong> Choose Secret Voting (Anonymity) or Public Voting (Chaos).</li>
                 </ul>
             </div>
 
             <div class="feature-card">
-                <h3>B. The Oracle Suite</h3>
-                <p>Let fate decide when you cannot.</p>
+                <h3>B. Adrenaline Rush</h3>
+                <p>High-stakes challenges.</p>
                 <ul>
-                    <li><strong>Wheel of Destiny:</strong> Customizable spin wheel to settle arguments.</li>
-                    <li><strong>Cosmic Dice & Coin:</strong> High-fidelity 3D randomization.</li>
-                    <li><strong>Spin The Bottle:</strong> Classic mechanic reimagined for the digital age.</li>
+                    <li><strong>Time Bomb:</strong> Tick... Tock... Answer fast and pass the phone before it explodes. A test of panic and vocabulary.</li>
                 </ul>
             </div>
 
             <div class="feature-card">
-                <h3>C. Mind Games</h3>
-                <p>Test your team's synergy.</p>
+                <h3>C. The Mind Games</h3>
+                <p>Test team synergy.</p>
                 <ul>
-                    <li><strong>Word Guessing:</strong> Test vocabulary and speed under pressure.</li>
+                    <li><strong>Identity Crisis:</strong> (Min Elly) A fast-paced "Who Am I?" challenge. Let friends guide you to the answer.</li>
                     <li><strong>More:</strong> New arenas coming soon.</li>
+                </ul>
+            </div>
+
+            <div class="feature-card">
+                <h3>D. The Oracle Suite</h3>
+                <p>Let fate decide.</p>
+                <ul>
+                    <li><strong>Wheel of Destiny:</strong> Customizable spin wheel to settle arguments.</li>
+                    <li><strong>Cosmic Dice & Coin:</strong> High-fidelity 3D randomization.</li>
+                    <li><strong>Spin The Bottle:</strong> Classic mechanic reimagined.</li>
                 </ul>
             </div>
         </div>
@@ -193,16 +201,16 @@
                 Native Android (Universal AAB)
             </li>
             <li class="tech-item">
+                <span class="tech-label">Languages</span>
+                English & Arabic (Native Support)
+            </li>
+            <li class="tech-item">
                 <span class="tech-label">Identity</span>
                 SATER Minimalist (Clean & Dark)
             </li>
             <li class="tech-item">
-                <span class="tech-label">Monetization</span>
-                Free-to-Play (Non-intrusive Ads)
-            </li>
-            <li class="tech-item">
                 <span class="tech-label">Security</span>
-                IARC Compliant Global Rating
+                IARC Compliant (Safe for all ages)
             </li>
         </ul>
     </div>
