Add new app card for ZILL with details

--- a/apps.html
+++ b/apps.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="/favicon.png">
 
     <style>
         :root { --bg-color: #F2EFE5; --text-color: #0E182A; }
@@ -119,7 +120,6 @@
             .apps-grid { grid-template-columns: 1fr; }
         }
     </style>
-    <link rel="icon" type="image/png" href="/favicon.png">
 </head>
 <body>
 
@@ -173,6 +173,23 @@
                     <div class="sub-links">
                         <a href="khamen/privacy.html">Privacy</a>
                         <a href="khamen/terms.html">Terms</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="app-card">
+                <h2 class="app-name" style="color: #FF6B00;">ZILL</h2>
+                <span class="app-tagline">Sun Smart Navigation</span>
+                <p class="app-desc">
+                    Avoid sun glare & heat.<br>
+                    Smart seat planner & solar compass.<br>
+                    Drive cooler.
+                </p>
+                <div class="app-links">
+                    <a href="zill/index.html" class="main-link">Official Page</a>
+                    <div class="sub-links">
+                        <a href="zill/privacy.html">Privacy</a>
+                        <a href="zill/terms.html">Terms</a>
                     </div>
                 </div>
             </div>
