Update app names with new styles

--- a/apps.html
+++ b/apps.html
@@ -144,7 +144,7 @@
         <div class="apps-grid">
             
             <div class="app-card">
-                <h2 class="app-name">TAM</h2>
+                <h2 class="app-name" style="color: #D4AF37;">TAM</h2>
                 <span class="app-tagline">Productivity Redefined</span>
                 <p class="app-desc">
                     The ultimate minimalist task manager. <br>
@@ -161,7 +161,7 @@
             </div>
 
             <div class="app-card">
-                <h2 class="app-name">KHAMEN</h2>
+                <h2 class="app-name" style="color: #3498DB;">KHAMEN</h2>
                 <span class="app-tagline">Social Intelligence</span>
                 <p class="app-desc">
                     A party game that tests your intuition.<br>
