--- a/tam/index.html
+++ b/tam/index.html
@@ -8,12 +8,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="/favicon.png">
 
     <style>
         :root { 
-            --bg-color: #F2EFE5; 
-            --text-color: #0E182A; 
-            --gold-accent: #C5A059; /* لون ذهبي مطفي للفخامة */
+            /* هوية TAM: أسود ملكي وذهبي */
+            --bg-color: #121212; /* أسود داكن جداً */
+            --text-color: #E0E0E0; /* رمادي فاتح للنصوص */
+            --gold-accent: #D4AF37; /* ذهبي معدني */
+            --panel-bg: rgba(212, 175, 55, 0.05); /* خلفية البطاقات بلمسة ذهبية خفيفة */
         }
         
         body {
@@ -22,7 +25,7 @@
             display: flex; flex-direction: column; align-items: center; min-height: 100vh;
         }
 
-        /* ملمس الخلفية */
+        /* ملمس الخلفية: تأثير نويز خفيف */
         body::before {
             content: ""; position: fixed; top: 0; left: 0; width: 100%; height: 100%;
             background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.65' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)' opacity='0.04'/%3E%3C/svg%3E");
@@ -30,15 +33,15 @@
         }
 
         /* القائمة */
-        nav { padding: 30px 0; text-align: center; width: 100%; border-bottom: 1px solid rgba(14,24,42,0.1); }
+        nav { padding: 30px 0; text-align: center; width: 100%; border-bottom: 1px solid rgba(212, 175, 55, 0.2); }
         nav a {
             text-decoration: none; color: var(--text-color); font-size: 0.8rem;
             margin: 0 10px; text-transform: uppercase; letter-spacing: 1px;
             opacity: 0.6; transition: opacity 0.3s;
         }
-        nav a:hover { opacity: 1; }
+        nav a:hover { opacity: 1; color: var(--gold-accent); }
 
-        /* الهيرو سكشن (مقدمة الصفحة) */
+        /* الهيرو سكشن */
         .hero-section {
             text-align: center; padding: 80px 20px;
             animation: fadeIn 1s ease-out forwards;
@@ -46,14 +49,13 @@
 
         h1.main-title {
             font-family: 'Cinzel', serif; font-size: 4rem; margin: 0;
-            text-transform: uppercase; letter-spacing: 8px; color: var(--text-color);
+            text-transform: uppercase; letter-spacing: 8px; color: var(--gold-accent);
+            text-shadow: 0 0 15px rgba(212, 175, 55, 0.3); /* توهج ذهبي خفيف */
         }
         
-        .gold-text { color: var(--gold-accent); }
-
         h2.subtitle {
             font-family: 'Cinzel', serif; font-size: 1.2rem; margin-top: 10px;
-            letter-spacing: 3px; opacity: 0.8; font-weight: 400;
+            letter-spacing: 3px; opacity: 0.8; font-weight: 400; color: var(--text-color);
         }
 
         p.intro-text {
@@ -61,8 +63,10 @@
         }
 
         .status-badge {
-            display: inline-block; padding: 8px 16px; border: 1px solid var(--text-color);
+            display: inline-block; padding: 8px 16px; border: 1px solid var(--gold-accent);
             font-size: 0.7rem; text-transform: uppercase; margin-top: 20px; letter-spacing: 1px;
+            color: var(--gold-accent);
+            box-shadow: 0 0 5px rgba(212, 175, 55, 0.2);
         }
 
         /* الأقسام (Pillars) */
@@ -72,7 +76,7 @@
 
         .section-header {
             font-family: 'Cinzel', serif; font-size: 2rem; border-bottom: 2px solid var(--gold-accent);
-            padding-bottom: 10px; margin-bottom: 30px; display: inline-block;
+            padding-bottom: 10px; margin-bottom: 30px; display: inline-block; color: var(--gold-accent);
         }
 
         .feature-grid {
@@ -80,20 +84,28 @@
         }
 
         .feature-card {
-            background: rgba(255,255,255,0.5); padding: 25px; border-left: 3px solid var(--text-color);
-            transition: transform 0.3s;
+            background: var(--panel-bg); padding: 25px; border-left: 3px solid var(--text-color);
+            transition: transform 0.3s, border-color 0.3s;
         }
-        .feature-card:hover { transform: translateY(-5px); border-color: var(--gold-accent); }
+        .feature-card:hover { 
+            transform: translateY(-5px); 
+            border-color: var(--gold-accent); 
+            background: rgba(212, 175, 55, 0.1);
+        }
 
         .feature-card h3 {
             font-family: 'Cinzel', serif; margin-top: 0; font-size: 1.1rem; letter-spacing: 1px;
+            color: var(--gold-accent);
         }
 
         .feature-card p { font-size: 0.85rem; line-height: 1.6; opacity: 0.85; }
+        .feature-card ul { padding-left: 20px; margin-top: 10px; }
+        .feature-card li { margin-bottom: 5px; font-size: 0.85rem; opacity: 0.8; }
+        .feature-card strong { color: var(--gold-accent); }
 
         /* احصائيات اللعبة (RPG Stats) */
         .stat-box {
-            display: flex; justify-content: space-between; border-bottom: 1px dashed rgba(14,24,42,0.2);
+            display: flex; justify-content: space-between; border-bottom: 1px dashed rgba(212, 175, 55, 0.3);
             padding: 10px 0; font-size: 0.9rem;
         }
         .stat-name { font-weight: 700; color: var(--gold-accent); }
@@ -102,19 +114,19 @@
         .tech-list {
             list-style: none; padding: 0; display: grid; grid-template-columns: 1fr 1fr; gap: 20px;
         }
-        .tech-item { border: 1px solid rgba(14,24,42,0.1); padding: 15px; font-size: 0.8rem; }
-        .tech-label { display: block; font-weight: 700; margin-bottom: 5px; opacity: 0.5; text-transform: uppercase; }
+        .tech-item { border: 1px solid rgba(255, 255, 255, 0.1); padding: 15px; font-size: 0.8rem; }
+        .tech-label { display: block; font-weight: 700; margin-bottom: 5px; opacity: 0.7; text-transform: uppercase; color: var(--gold-accent); }
 
         /* اقتباس المطور */
         .vision-quote {
-            text-align: center; padding: 60px 20px; background: var(--text-color); color: var(--bg-color);
-            width: 100%; margin-top: 50px;
+            text-align: center; padding: 60px 20px; background: rgba(255, 255, 255, 0.05); 
+            width: 100%; margin-top: 50px; border-top: 1px solid var(--gold-accent); border-bottom: 1px solid var(--gold-accent);
         }
         .quote-text {
             font-family: 'Cinzel', serif; font-size: 1.3rem; line-height: 1.6; max-width: 700px; margin: 0 auto;
-            font-style: italic; letter-spacing: 1px;
+            font-style: italic; letter-spacing: 1px; color: var(--text-color);
         }
-        .quote-author { display: block; margin-top: 20px; font-size: 0.8rem; opacity: 0.7; font-family: 'Space Mono'; }
+        .quote-author { display: block; margin-top: 20px; font-size: 0.8rem; opacity: 0.7; font-family: 'Space Mono'; color: var(--gold-accent); }
 
         /* الفوتر */
         .footer-links {
@@ -129,7 +141,6 @@
             .tech-list { grid-template-columns: 1fr; }
         }
     </style>
-    <link rel="icon" type="image/png" href="/favicon.png">
 </head>
 <body>
 
