--- a/khamen/privacy.html
+++ b/khamen/privacy.html
@@ -8,12 +8,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="/favicon.png">
 
     <style>
         :root { 
-            --bg-color: #F2EFE5; 
-            --text-color: #0E182A; 
-            --accent-color: #3498DB; /* نفس الأزرق السماوي لصفحة خمن */
+            /* هوية KHAMEN: أسود وأزرق سماوي */
+            --bg-color: #0E182A; 
+            --text-color: #E0E0E0; 
+            --accent-color: #3498DB; 
         }
         
         body {
@@ -22,19 +24,21 @@
             display: flex; flex-direction: column; align-items: center; min-height: 100vh;
         }
 
+        /* ملمس الخلفية */
         body::before {
             content: ""; position: fixed; top: 0; left: 0; width: 100%; height: 100%;
             background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.65' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)' opacity='0.04'/%3E%3C/svg%3E");
             pointer-events: none; z-index: -1;
         }
 
-        nav { padding: 40px 0; text-align: center; width: 100%; border-bottom: 1px solid rgba(14,24,42,0.1); }
+        /* القائمة */
+        nav { padding: 40px 0; text-align: center; width: 100%; border-bottom: 1px solid rgba(52, 152, 219, 0.2); }
         nav a {
             text-decoration: none; color: var(--text-color); font-size: 0.8rem;
             margin: 0 10px; text-transform: uppercase; letter-spacing: 1px;
             opacity: 0.6; transition: opacity 0.3s;
         }
-        nav a:hover { opacity: 1; }
+        nav a:hover { opacity: 1; color: var(--accent-color); }
 
         .legal-container {
             width: 85%; max-width: 800px; margin-top: 50px; margin-bottom: 80px;
@@ -43,42 +47,39 @@
 
         h1.doc-title {
             font-family: 'Cinzel', serif; font-size: 2.5rem; margin: 0;
-            text-transform: uppercase; letter-spacing: 3px;
+            text-transform: uppercase; letter-spacing: 3px; color: var(--accent-color);
         }
 
         h2.app-name {
-            font-family: 'Space Mono', monospace; font-size: 1rem; color: var(--accent-color);
-            opacity: 0.8; margin-top: 10px; margin-bottom: 50px; text-transform: uppercase; font-weight: 700;
+            font-family: 'Space Mono', monospace; font-size: 1rem; color: var(--text-color);
+            opacity: 0.7; margin-top: 10px; margin-bottom: 50px; text-transform: uppercase; font-weight: 700;
         }
 
         .legal-text h3 {
             font-family: 'Cinzel', serif; font-size: 1.2rem; margin-top: 40px;
-            border-bottom: 1px solid rgba(52, 152, 219, 0.3); padding-bottom: 10px;
+            border-bottom: 1px solid rgba(52, 152, 219, 0.3); padding-bottom: 10px; color: var(--accent-color);
         }
 
         .legal-text p { font-size: 0.9rem; line-height: 1.7; opacity: 0.9; margin-bottom: 20px; }
         
-        .legal-text strong { font-weight: 700; color: var(--text-color); }
-
-        /* تنسيق القوائم للنقاط الجديدة */
-        .legal-text ul { padding-left: 20px; margin-bottom: 20px; }
-        .legal-text li { margin-bottom: 10px; font-size: 0.9rem; }
+        .legal-text ul { list-style-type: square; padding-left: 20px; opacity: 0.9; line-height: 1.7; }
+        .legal-text li { margin-bottom: 10px; }
+        .legal-text strong { font-weight: 700; color: var(--accent-color); }
         .legal-text a { color: var(--accent-color); text-decoration: none; border-bottom: 1px dotted var(--accent-color); }
         .legal-text a:hover { border-bottom-style: solid; }
 
         .back-btn {
             display: inline-block; margin-top: 40px; padding: 15px 30px;
-            border: 1px solid var(--text-color); color: var(--text-color);
+            border: 1px solid var(--accent-color); color: var(--accent-color);
             text-decoration: none; text-transform: uppercase; font-size: 0.8rem;
             transition: all 0.3s;
         }
-        .back-btn:hover { background-color: var(--accent-color); border-color: var(--accent-color); color: white; }
+        .back-btn:hover { background-color: var(--accent-color); color: var(--bg-color); }
 
         @keyframes fadeIn { from { opacity: 0; transform: translateY(20px); } to { opacity: 1; transform: translateY(0); } }
 
         @media (max-width: 600px) { h1.doc-title { font-size: 1.8rem; } }
     </style>
-    <link rel="icon" type="image/png" href="/favicon.png">
 </head>
 <body>
 
@@ -148,7 +149,7 @@
             <h3>7. Contact Us</h3>
             <p>
                 If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me at: 
-                <a href="mailto:beatnabytna@gmail.com" style="color: var(--accent-color); font-weight: bold; text-decoration: none;">beatnabytna@gmail.com</a>
+                <a href="mailto:beatnabytna@gmail.com">beatnabytna@gmail.com</a>
             </p>
         </div>
 
